src/test/ui/hr-subtype/hr-subtype.bound_a_vs_free_x.nll.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:45:13
   |
LL |               gimme::<$t1>(None::<$t2>);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
...
LL | / check! { bound_a_vs_free_x: (for<'a> fn(&'a u32),
LL | | fn(&'x u32)) }
   | |______________- in this macro invocation
   |
   = note: expected enum `Option<for<'a> fn(&'a u32)>`
              found enum `Option<fn(&u32)>`
   = note: this error originates in the macro `check` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
